fixed alignment issues

--- a/src/styles/BeReferrer.module.css
+++ b/src/styles/BeReferrer.module.css
@@ -93,7 +93,9 @@ flex-direction: column;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 1.8em;
   /* border: 1px solid white; */
-  background-color: transparent;
+  /* background-color: green; */
+  /* border: 1px solid white; */
+  padding: 1rem;
 }
 
 .right-dashboard-header {
