--- a/src/styles/MyRequests.module.css
+++ b/src/styles/MyRequests.module.css
@@ -92,8 +92,9 @@ flex-direction: column;
   align-items: center;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 1.8em;
-  border: 1px solid white;
+  /* border: 1px solid white; */
   background-color: transparent;
+  padding: 1rem;
 }
 
 .right-dashboard-header {
